<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Capstone Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="authority">example.com.capstoneproject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_water_res">Not resistant at all. Will get wet, soaked or even damaged in light rain</string>
    <string name="light_water_res">Will resist light rain for a short time, but not suitable for longer exposure.</string>
    <string name="medium_water_res">Can handle light to medium rain/snow for longer periods of time (30 min - 1h).</string>
    <string name="high_water_res">Can resist even strong showers and doesn\'t soak almost at all.</string>
    <string name="very_high_water_res">Fully or almost fully resistant to rain. Suitable for extreme weather conditions.</string>
    <string name="no_wind_res">Provides no wind resistance at all.</string>
    <string name="light_wind_res">Can shield from light winds and breezes but doesn\'t protect from strong wind.</string>
    <string name="very_high_wind_res">Completely wind resistant. Protects completely from being chilled by the wind.</string>
    <string name="high_wind_res">Provides good protection from wind.</string>
    <string name="medium_wind_res">Suitable for medium wind strength.</string>
    <string name="no_temp_res" formatted="false">Suitable for hot days (%s+ degrees).</string>
    <string name="light_temp_res" formatted="false">Good for warmer days (%s - %s degrees)</string>
    <string name="medium_temp_res" formatted="false">Provides some protections from cold (%s - %s degrees)</string>
    <string name="high_temp_res" formatted="false">Good for colder days (%s - %s)</string>
    <string name="very_high_temp_res" formatted="false">Perfect for winters (%s and below)</string>
    <string name="drag_up_down">Drag up or down to change</string>
    <string name="clothing_list">Clothing list</string>
    <string name="no_items_found_please_add_some">No items found, please add some</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_clothing_name">Enter clothing name</string>
    <string name="image_transition">photo_transition</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="swipe_left_or_right_to_change">Swipe left or right to change</string>
    <string name="content_authority">example.com.capstoneproject</string>
    <string name="sync_account_type">capstoneproject.example.com</string>
    <string name="title_activity_permision">PermisionActivity</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h</string>
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="blouse">Blouse</string>
    <string name="jacket">Jacket</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="trousers">Trousers</string>
    <string name="skirt">Skirt</string>
    <string name="shirt">Shirt</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="loc_perm_message">Smart Apparel needs to be able to access your location in order to be able to gather accurate weather information.</string>
    <string name="loc_perm_title">Location access required</string>
    <string name="ok">Ok</string>
    <string name="not_available">N/A</string>
    <string name="suggested_apparel">Suggested apparel</string>
    <string name="weather_data_unavailable">Weather data unavailable</string>
    <string name="snow">Snow</string>
    <string name="storm">Storm</string>
    <string name="rain">Rain</string>
    <string name="l_rain">Light rain</string>
    <string name="l_clouds">Light clouds</string>
    <string name="fog">Fog</string>
    <string name="clouds">Clouds</string>
    <string name="clear_sky">Clear sky</string>
    <string name="very_high_water_res_cd">Very high water resistance</string>
    <string name="no_water_res_cd">No water resistance</string>
    <string name="medium_water_res_cd">Medium water resistance</string>
    <string name="light_water_res_cd">Light water resistance</string>
    <string name="high_water_res_cd">High water resistance</string>
    <string name="very_high_cold_res_cd">Very high cold resistance</string>
    <string name="no_cold_res_cd">No cold resistance</string>
    <string name="medium_cold_res_cd">Medium cold resistance</string>
    <string name="light_cold_res_cd">Light cold resistance</string>
    <string name="high_cold_res_cd">High cold resistance</string>
    <string name="very_high_wind_res_cd">Very high wind resistance</string>
    <string name="no_wind_res_cd">No wind resistance</string>
    <string name="medium_wind_res_cd">Medium wind resistance</string>
    <string name="light_wind_res_cd">Light wind resistance</string>
    <string name="high_wind_res_cd">High wind resistance</string>
    <string name="photo_holder">Photo holder</string>
    <string name="long_press_to_add_or_change_photo">Long press to add or change photo.</string>
    <string name="cd_temp_val">Image</string>
    <string name="item_list">Item list</string>
    <string name="view_item">View item</string>
    <string name="edit_item">Edit item</string>
    <string name="add_item">Add item</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select_item_template" formatted="false">Select %s</string>
    <string name="manage_clothing">Manage clothing</string>
    <string name="type">Type</string>
    <string name="water_res">Water resistance</string>
    <string name="wind_res">Wind resistance</string>
    <string name="cold_res">Cold resistance</string>
    <string name="no_weather_data">No weather data available. Check your Internet connection and Location settings.</string>
    <string name="main_item_transition">MainItemTransition</string>
    <string name="tran1">tran1</string>
    <string name="tran2">tran2</string>
    <string name="tran3">tran3</string>
    <string name="tran">tran</string>
</resources>
