<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="example.com.capstoneproject.gui_layer.fragments.ItemTypeFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/swipe_left_right_tv"
        style="@style/large_tv_style"
        android:text="@string/swipe_left_or_right_to_change"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/medium_margin_padding"
        />

    <ViewFlipper
        android:id="@+id/type_imge_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/swipe_left_right_tv"

        >

    </ViewFlipper>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancel_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/cancel"
        android:layout_above="@+id/confirm_fab"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/medium_margin_padding"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_confirm"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/confirm"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="@dimen/medium_margin_padding"
        android:layout_marginEnd="@dimen/medium_margin_padding"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
